fix product detail on mobile

--- a/sass/_detail.sass
+++ b/sass/_detail.sass
@@ -598,3 +598,8 @@
       border-bottom: 0.5px solid $color_border
   .input
     border-bottom: none
+
++until(321px)
+  .detail
+    .qty
+      max-width: 45px
