--- a/sass/modules/_footer.sass
+++ b/sass/modules/_footer.sass
@@ -6,6 +6,7 @@
     +size(100%, 46px)
     border-top: 1px solid $color_border_ccc
     background-color: $white
+    z-index: 99
     &.nav-button
       height: 66px
       padding: 10px
